feat: criando mais metodos de consultas